added reset button

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <script src="scripts.js" defer></script>
 </head>
 <body>
+    <h1>Etch-a-Sketch</h1>
+    <p>Odin Project Foundations Course</p>
+    <br>
+    <button id="reset">Reset</button>
+    <br>
     <div id="container"></div>
 </body>
 </html>
