added resize button

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <br>
     <button id="reset">Reset</button>
     <br>
+    <button id="prompt">Choose pad size</button>
+    <br>
     <div id="container"></div>
 </body>
 </html>
