optimized code, merged similar functions

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <h1>Etch-a-Sketch</h1>
     <p>Odin Project Foundations Course</p>
     <br>
-    <button id="reset" onclick="resetBoard()">Reset</button>
+    <button id="reset">Reset</button>
     <br>
-    <button id="prompt" onclick="canvasSize()">Choose pad size</button>
+    <button id="prompt">Choose pad size</button>
     <br>
     <div id="container"></div>
 </body>
