added random comments

--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
     <button id="prompt">Choose pad size</button>
     <br>
     <div id="container"></div>
+    <br>
+    <div id="talkbox"></div>
 </body>
 </html>
