changed background color

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     <h1>Etch-a-Sketch</h1>
     <p>Odin Project Foundations Course</p>
     <br>
+    <div class="buttons">
     <button id="reset">Reset</button>
-    <br>
     <button id="prompt">Choose pad size</button>
+    </div>
     <br>
     <div id="container"></div>
     <br>
