--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <div class="buttons">
     <button id="reset">Reset</button>
     <button id="prompt">Choose pad size</button>
+    <button id="color">Color Vomit</button>
+    <button id="black">Black</button>
     </div> 
     <div id="container"></div>
     <div id="talkbox"></div>
