--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     <h1>Etch-a-Sketch</h1>
-    <p>Odin Project Foundations Course</p>
+    <h2>Odin Project Foundations Course</h2>
+    <p>By Tinfoil-droid.</p>
     <div class="buttons">
     <button id="reset">Reset</button>
     <button id="prompt">Choose pad size</button>
